--- a/Researching_Machine_Learning_Algorithm(XGBoost).ipynb
+++ b/Researching_Machine_Learning_Algorithm(XGBoost).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,8 @@
       "[12]\tvalidation_0-aucpr:0.65784\n",
       "[13]\tvalidation_0-aucpr:0.65470\n",
       "[14]\tvalidation_0-aucpr:0.65782\n",
-      "[15]\tvalidation_0-aucpr:0.65167\n"
+      "[15]\tvalidation_0-aucpr:0.65167\n",
+      "[16]\tvalidation_0-aucpr:0.64844\n"
      ]
     }
    ],
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "0.47401025972993394"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
