--- a/Researching_Machine_Learning_Algorithm(XGBoost).ipynb
+++ b/Researching_Machine_Learning_Algorithm(XGBoost).ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Creat a XGBoost Model and predict the test set."
+    "4. Create a XGBoost Model and predict the test set."
    ]
   },
   {
